2002-12-26  Artis Trops <hornet@navigator.lv>

	* configure.in: Added Latvian (lv) to ALL_LINGUAS.

2002-12-25 Damien Sandras  <dsandras@seconix.com>

	* gnomemeeting.schemas.in.in: Changed keys for groups and servers.

	* configure.in: Incremented SCHEMA_AGE.
	
	* src/common.h: See above.
	
	* src/config.cpp: Added notifiers.
	
	* src/ldap_window.cpp: Added dynamic right-click menu that permits
	to add users to dynamically created groups.
	
2002-12-24 Damien Sandras  <dsandras@seconix.com>

	* src/config.cpp: Fixed to respect the new API of the notebook
	page creator.

	* src/ldap_window.cpp: Function that is creating the notebook pages
	is now able to create different pages for groups and servers.

	* src/ldap_window.h: See above.

2002-12-24 Damien Sandras  <dsandras@seconix.com>

	* src/cleaner.cpp: The Appbar timer is now removed here.

	* src/main_window.cpp: Removed the gtk_timeout_remove for the Appbar
	Timer.

2002-12-24 Damien Sandras  <dsandras@seconix.com>

	* src/callbacks.cpp, src/cleaner.cpp, src/cleaner.h,
	  src/endpoint.cpp, src/gnomemeeting.cpp, src/gnomemeeting.h,
	  src/main_window.cpp, src/misc.cpp: Fixed exit bug.

2002-12-23 Damien Sandras  <dsandras@seconix.com>

	* gnomemeeting.schemas.in.in: Added very preliminary support for 
	groups.

	* src/common.h: See above.

	* src/config.cpp: See above.

	* src/ldap_window.cpp: See above.

2002-12-23 Damien Sandras  <dsandras@seconix.com>

	* pixmaps/gnomemeeting-logo.png: Made logo smaller.

2002-12-23 Damien Sandras  <dsandras@seconix.com>

	* configure.in: Incremented SCHEMA_AGE.
	
	* gnomemeeting.schemas.in.in: Added key to enable/disable video 
	reception. Useful for dialup users.

	* src/common.h: Removed widgets for g.711 and GSM frames. Added widget
	for video reception.

	* src/config.cpp: Added notifier for video reception changes. Removed
	some of the notifiers for G.711 frames and GSM frames. They were 
	removed from the preferences, but still exist in GConf. They were